--- a/Labo3-TemplateBoussole/app/src/main/res/values/strings.xml
+++ b/Labo3-TemplateBoussole/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">Labo3 - 3D Compass template</string>
+    <string name="main_butt_bar">Bar Code</string>
+    <string name="main_butt_beacon">iBeacon</string>
+    <string name="main_butt_compass">Compass</string>
+    <string name="main_butt_nfc">NFC</string>
+    <string name="main_butt_qr">QR Code</string>
+    <string name="good">Next Activity</string>
 </resources>
