Navigation works, I'm the best

--- a/Labo3-TemplateBoussole/app/src/main/res/values/strings.xml
+++ b/Labo3-TemplateBoussole/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Labo3 - 3D Compass template</string>
+    <string name="app_name">SYM - Use of environmental data</string>
     <string name="main_butt_bar">Bar Code</string>
     <string name="main_butt_beacon">iBeacon</string>
     <string name="main_butt_compass">Compass</string>
